<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    app:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/media_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/media_player_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:resize_mode="fill" />

        <ImageView
            android:id="@+id/media_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/property_media"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/media_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#4D000000"
            android:gravity="center"
            android:text="@string/text"
            android:textAlignment="gravity"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/media_guideline" />

        <TextView
            android:id="@+id/media_current_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#99000000"
            android:padding="4dp"
            android:text="@string/page"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>