<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/real_estate_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/real_estate_guideline_thirty_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/real_estate_guideline_thirty_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/real_estate_guideline_sixty_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <ImageView
            android:id="@+id/real_estate_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/property_image"
            android:padding="4dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/real_estate_guideline_thirty_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/real_estate_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/type"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/real_estate_guideline_thirty_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/real_estate_guideline_thirty_vertical"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/real_estate_district"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/district"
            app:layout_constraintBottom_toTopOf="@+id/real_estate_guideline_sixty_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/real_estate_guideline_thirty_vertical"
            app:layout_constraintTop_toBottomOf="@+id/real_estate_guideline_thirty_horizontal" />

        <TextView
            android:id="@+id/real_estate_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/real_estate_guideline_thirty_vertical"
            app:layout_constraintTop_toBottomOf="@+id/real_estate_guideline_sixty_horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>